--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.ucsb.cs.cs190i.JingYan.masterdetaildemo">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +15,9 @@
         <activity
             android:name="edu.ucsb.cs.cs190i.JingYan.masterdetaildemo.ActionListActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +28,8 @@
             android:name="edu.ucsb.cs.cs190i.JingYan.masterdetaildemo.ActionDetailActivity"
             android:label="@string/title_action_detail"
             android:parentActivityName="edu.ucsb.cs.cs190i.JingYan.masterdetaildemo.ActionListActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.ucsb.cs.cs190i.JingYan.masterdetaildemo.ActionListActivity" />
